--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,9 +1,9 @@
 
 {{>header}}
 
-
+<p>This site was create by {{name}}. It uses data from mapbox.com and weatherstack.com</p>
 <img src="/img/dan.jpg" alt="" class="portrait">
-    <p>Create by {{name}}</p>
+    
 
     
 {{>footer}}
